[tool.poetry]
name = "sbml"
version = "0.2.0"
description = "A programming language written for CSE 307"
authors = ["Patrick Chan <patrickchan1999@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
